use multi db setup for async work

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -1,3 +1,4 @@
+
 [buildout]
 #show-picked-versions = true
 # Dump the last successful picked versions to a file so that we can pin
@@ -37,6 +38,12 @@ varnish = http://repo.varnish-cache.org/source/varnish-2.1.5.tar.gz
 haproxy = http://haproxy.1wt.eu/download/1.4/src/haproxy-1.4.24.tar.gz
 libpcre = http://ftp.cs.stanford.edu/pub/exim/pcre/pcre-8.31.tar.bz2
 
+[zeoserver]
+zeo-conf-additional =
+    <filestorage 2>
+        path ${zeoserver:zeo-var}/filestorage/Async.fs
+    </filestorage>
+
 # Default settings for ZEO clients.
 [instance-settings]
 eggs =
@@ -60,10 +67,23 @@ zeo-address = ${hosts:zeoserver}:${ports:zeoserver}
 effective-user = ${users:zope}
 extra-paths = ${buildout:parts-directory}/site-packages
 zcml-additional =
-    <include package="plone.app.async" file="single_db_instance.zcml" />
+    <include package="plone.app.async" file="multi_db_instance.zcml" />
 environment-vars =
     ZC_ASYNC_UUID ${buildout:directory}/var/${:_buildout_section_name_}-uuid.txt
 zope-conf-additional =
+    <zodb_db async>
+        cache-size ${instance-settings:zodb-cache-size}
+        <zeoclient>
+            server ${hosts:zeoserver}:${ports:zeoserver}
+            storage 2
+            name asyncstorage
+            blob-dir ${zeoserver:blob-storage}
+            shared-blob-dir on
+            var ${zeoserver:zeo-var}
+            cache-size ${instance-settings:zeo-client-cache-size}
+        </zeoclient>
+        mount-point /zasync
+    </zodb_db>
     <product-config gu.plone.rdf>
         inifile ${ordf-conf:output}
         baseuri ${rdf-settings:baseuri}
@@ -90,7 +110,7 @@ zope-conf-additional =
 [worker-settings]
 <= instance-settings
 zcml-additional =
-    <include package="plone.app.async" file="single_db_worker.zcml" />
+    <include package="plone.app.async" file="multi_db_worker.zcml" />
 environment-vars =
     ZC_ASYNC_UUID ${buildout:directory}/var/${:_buildout_section_name_}-uuid.txt
     WORKER_DIR ${site:workdir}
