use latest z3c.form integration

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -13,6 +13,9 @@ geopy = 0.95.1
 # pin collective.transmogrifier to a version < 1.5 as currently
 # quintagroup.transmogrifier 0.5 requires collective.transmogrifier < 1.5
 collective.transmogrifier = 1.4
+# need some bug fixes here (3.0.2 dict widget doesn't work properly)
+z3c.form = 3.1.0
+plone.app.z3cform = 0.7.5
 
 
 zc.queue = 1.3
