replace localhost with 127.0.0.1

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -118,7 +118,7 @@ environment-vars =
 # Default settings for supervisor
 
 [rdf-settings]
-storeurl = http://localhost:6801/
+storeurl = http://127.0.0.1:6801/
 baseuri = http://${site:hostname}/individual/
 # baseuri has to end with / or #
 
