--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -216,7 +216,7 @@ url = http://apache.mirror.aussiehq.net.au/lucene/solr/3.4.0/apache-solr-3.4.0.t
 [solr-conf]
 recipe = collective.recipe.solrinstance
 solr-location = ${solr-download:location}
-host = localhost
+host = 127.0.0.1
 port = 8983
 basepath = /solr
 #section-name = SOLR
