run theme profile during plone site setup

--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -82,6 +82,7 @@ site-id = ${plone-sites:main}
 profiles-initial =
 #    plone.app.contenttypes:plone-content
     org.bccvl.site:default
+    org.bccvl.theme:default
 instance = instance-debug
 zeoserver = zeoserver
 
