deactivate compute tests for now

--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -45,7 +45,7 @@ auto-checkout +=
 eggs +=
     org.bccvl.site [test]
     org.bccvl.theme [test]
-    org.bccvl.compute
+#    org.bccvl.compute
     gu.plone.rdf [test]
     gu.repository.content [test]
     gu.z3cform.rdf [test]
@@ -55,7 +55,7 @@ defaults = ['--auto-color', '--auto-progress',
             '-m', 'gu.repository.content',
             '-m', 'org.bccvl.site',
             '-m', 'org.bccvl.theme',
-            '-m', 'org.bccvl.compute',
+#            '-m', 'org.bccvl.compute',
            ]
 
 [test-coverage]
@@ -65,7 +65,7 @@ defaults = ['--coverage', '../../coverage', '-v', '--auto-progress',
             '-m', 'gu.repository.content',
             '-m', 'org.bccvl.site',
             '-m', 'org.bccvl.theme',
-            '-m', 'org.bccvl.compute',
+#            '-m', 'org.bccvl.compute',
            ]
 
 [jenkins-test]
@@ -75,7 +75,7 @@ defaults = ['--auto-color', '--auto-progress', '--xml',
             '-m', 'gu.repository.content',
             '-m', 'org.bccvl.site',
             '-m', 'org.bccvl.theme',
-            '-m', 'org.bccvl.compute',
+#            '-m', 'org.bccvl.compute',
            ]
 eggs +=
     org.bccvl.site [test]
