update selenium to support FF 26

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -16,6 +16,7 @@ collective.transmogrifier = 1.4
 # need some bug fixes here (3.0.2 dict widget doesn't work properly)
 z3c.form = 3.1.0
 plone.app.z3cform = 0.7.5
+selenium = 2.39.0
 
 
 zc.queue = 1.3
