--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -114,6 +114,9 @@ zcml-additional =
 environment-vars =
     ZC_ASYNC_UUID ${buildout:directory}/var/${:_buildout_section_name_}-uuid.txt
     WORKER_DIR ${site:workdir}
+    COMPUTE_HOST ${site:computehost}
+    COMPUTE_USER ${site:computeuser}
+    DATA_MOVER ${site:datamover}
 
 # Default settings for supervisor
 
@@ -145,6 +148,10 @@ schemahost = ns.bccvl.org.au
 certfile = /etc/pki/tls/certs/localhost.crt
 keyfile = /etc/pki/tls/private/localhost.key
 workdir = /mnt/work
+computehost = 127.0.0.1
+computeuser = ${users:main}
+datamover = http://127.0.0.1:10700/data_mover
+
 
 [hosts]
 main = 127.0.0.1
