--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -17,6 +17,11 @@ z3c.form = 3.1.0
 plone.app.z3cform = 0.7.5
 selenium = 2.39.0
 
+plone.dexterity = 2.2.1
+plone.app.portlets = 2.5a1
+plone.app.layout = 2.3.11
+plone.app.querystring = 1.1.1
+
 
 zc.queue = 1.3
 mr.developer = 1.26
