upgrade buildout (requires to re-bootstrap existing buildouts)

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -1,4 +1,6 @@
 [versions]
+zc.buildout = 2.2.1
+setuptools = 2.2
 # due to a bug in plone.session 3.5.1, 3.5.2 and 3.5.3 pin it
 plone.session = 3.5
 # for dexterity based contenttypes we need a newer version of plone.app.collection
@@ -7,7 +9,6 @@ plone.app.jquery = 1.8.3
 
 rdflib = 4.1
 Jinja2 = 2.7.1
-geopy = 0.95.1
 
 # pin collective.transmogrifier to a version < 1.5 as currently
 # quintagroup.transmogrifier 0.5 requires collective.transmogrifier < 1.5
@@ -17,6 +18,7 @@ z3c.form = 3.1.0
 plone.app.z3cform = 0.7.5
 selenium = 2.39.0
 
+plone.app.contenttypes = 1.1b1
 plone.dexterity = 2.2.1
 plone.app.portlets = 2.5a1
 plone.app.layout = 2.3.11
