use release of rdflib-zodb

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -8,6 +8,7 @@ plone.session = 3.5
 plone.app.jquery = 1.8.3
 
 rdflib = 4.1
+rdflib-zodb = 1.0
 Jinja2 = 2.7.1
 
 # pin collective.transmogrifier to a version < 1.5 as currently
@@ -23,6 +24,7 @@ plone.dexterity = 2.2.1
 plone.app.portlets = 2.5a1
 plone.app.layout = 2.3.11
 plone.app.querystring = 1.1.1
+plone.subrequest = 1.6.8
 
 
 zc.queue = 1.3
