--- a/buildout.d/sources.cfg
+++ b/buildout.d/sources.cfg
@@ -28,10 +28,11 @@ rdflib_push = git@github.com:RDFLib
 
 
 [sources]
-org.bccvl.site = git ${remotes:bccvl}/org.bccvl.site.git pushurl=${remotes:bccvl_push}/org.bccvl.site.git
-org.bccvl.theme = git ${remotes:bccvl}/org.bccvl.theme.git pushurl=${remotes:bccvl_push}/org.bccvl.theme.git
-org.bccvl.testsetup = git ${remotes:bccvl}/org.bccvl.testsetup.git pushurl=${remotes:bccvl_push}/org.bccvl.testsetup.git
-org.bccvl.compute = git ${remotes:bccvl}/org.bccvl.compute.git pushurl=${remotes:bccvl_push}/org.bccvl.compute.git
+org.bccvl.site = git ${remotes:bccvl}/org.bccvl.site.git pushurl=${remotes:bccvl_push}/org.bccvl.site.git branch=qa
+org.bccvl.theme = git ${remotes:bccvl}/org.bccvl.theme.git pushurl=${remotes:bccvl_push}/org.bccvl.theme.git branch=qa
+org.bccvl.testsetup = git ${remotes:bccvl}/org.bccvl.testsetup.git pushurl=${remotes:bccvl_push}/org.bccvl.testsetup.git branch=qa
+org.bccvl.compute = git ${remotes:bccvl}/org.bccvl.compute.git pushurl=${remotes:bccvl_push}/org.bccvl.compute.git branch=qa
+
 gu.repository.content = git ${remotes:subsoft}/gu.repository.content.git pushurl=${remotes:subsoft_push}:gu.repository.content.git
 gu.plone.rdf = git ${remotes:subsoft}/gu.plone.rdf.git pushurl=${remotes:subsoft_push}:gu.plone.rdf.git
 plone.app.folderui = git ${remotes:subsoft}/plone.app.folderui pushurl=${remotes:subsoft_push}:plone.app.folderui branch=localdev
