--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -1,9 +1,24 @@
+[buildout]
+
+find-links +=
+  https://github.com/gu-eresearch/collective.js.uix.multiselect/archive/${versions:collective.js.uix.multiselect}.tar.gz#egg=collective.js.uix.multiselect-${versions:collective.js.uix.multiselect}
+  https://bitbucket.org/gweis/ordf/get/${versions:ordf}.tar.bz2#egg=ordf-${versions:ordf}
+  http://subsoft.rcs.griffith.edu.au/gitweb/gu.plone.rdf.git/snapshot/refs/tags/${versions:gu.plone.rdf}#egg=gu.plone.rdf-${versions:gu.plone.rdf}
+  http://subsoft.rcs.griffith.edu.au/gitweb/gu.z3cform.rdf.git/snapshot/refs/tags/${versions:gu.z3cform.rdf}#egg=gu.z3cform.rdf-${versions:gu.z3cform.rdf}
+  http://subsoft.rcs.griffith.edu.au/gitweb/plone.app.folderui.git/snapshot/refs/tags/${versions:plone.app.folderui}#egg=plone.app.folderui-${versions:plone.app.folderui}
+  http://subsoft.rcs.griffith.edu.au/gitweb/gu.repository.content.git/snapshot/refs/tags/${versions:gu.repository.content}#egg=gu.repository.content-${versions:gu.repository.content}
+
 [versions]
 zc.buildout = 2.2.1
 setuptools = 2.2
 # due to a bug in plone.session 3.5.1, 3.5.2 and 3.5.3 pin it
 plone.session = 3.5
-# for dexterity based contenttypes we need a newer version of plone.app.collection
+collective.js.uix.multiselect = 2.0
+ordf = 0.36-gu1
+gu.plone.rdf = 2.1.1
+gu.z3cform.rdf = 0.5
+plone.app.folderui = 0.03-gurc5
+gu.repository.content = 1.5
 
 plone.app.jquery = 1.8.3
 
