--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -11,6 +11,13 @@ find-links +=
 [versions]
 zc.buildout = 2.2.1
 setuptools = 2.2
+
+# BCCVL Projects
+org.bccvl.compute = 0.8-rc1
+org.bccvl.site = 0.8-rc1
+org.bccvl.testsetup = 1.0-rc1
+org.bccvl.theme = 0.8-rc1
+
 # due to a bug in plone.session 3.5.1, 3.5.2 and 3.5.3 pin it
 plone.session = 3.5
 collective.js.uix.multiselect = 2.0
