--- a/buildout.d/staging.cfg
+++ b/buildout.d/staging.cfg
@@ -1,5 +1,7 @@
 [buildout]
 
+allow-picked-versions = false
+
 extends =
     base.cfg
     sources.cfg
@@ -9,8 +11,6 @@ extensions += mr.developer
 
 parts =
     lxml
-    zopepy
-    zopeip
     instance-ipython
     zeoserver
     instance-debug
@@ -41,5 +41,44 @@ eggs +=
 
 
 [test]
-eggs =
+eggs +=
     org.bccvl.site [test]
+    org.bccvl.theme [test]
+#    org.bccvl.compute
+    gu.plone.rdf [test]
+    gu.repository.content [test]
+    gu.z3cform.rdf [test]
+defaults = ['--auto-color', '--auto-progress',
+            '-m', 'gu.z3cform.rdf',
+            '-m', 'gu.plone.rdf',
+            '-m', 'gu.repository.content',
+            '-m', 'org.bccvl.site',
+            '-m', 'org.bccvl.theme',
+#            '-m', 'org.bccvl.compute',
+           ]
+
+[test-coverage]
+defaults = ['--coverage', '../../coverage', '-v', '--auto-progress',
+            '-m', 'gu.z3cform.rdf',
+            '-m', 'gu.plone.rdf',
+            '-m', 'gu.repository.content',
+            '-m', 'org.bccvl.site',
+            '-m', 'org.bccvl.theme',
+#            '-m', 'org.bccvl.compute',
+           ]
+
+[jenkins-test]
+defaults = ['--auto-color', '--auto-progress', '--xml',
+            '-m', 'gu.z3cform.rdf',
+            '-m', 'gu.plone.rdf',
+            '-m', 'gu.repository.content',
+            '-m', 'org.bccvl.site',
+            '-m', 'org.bccvl.theme',
+#            '-m', 'org.bccvl.compute',
+           ]
+eggs +=
+    org.bccvl.site [test]
+    org.bccvl.theme [test]
+    gu.plone.rdf [test]
+    gu.repository.content [test]
+    gu.z3cform.rdf [test]
