--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -7,12 +7,25 @@ find-links +=
   http://subsoft.rcs.griffith.edu.au/gitweb/gu.z3cform.rdf.git/snapshot/refs/tags/${versions:gu.z3cform.rdf}#egg=gu.z3cform.rdf-${versions:gu.z3cform.rdf}
   http://subsoft.rcs.griffith.edu.au/gitweb/plone.app.folderui.git/snapshot/refs/tags/${versions:plone.app.folderui}#egg=plone.app.folderui-${versions:plone.app.folderui}
   http://subsoft.rcs.griffith.edu.au/gitweb/gu.repository.content.git/snapshot/refs/tags/${versions:gu.repository.content}#egg=gu.repository.content-${versions:gu.repository.content}
+  https://github.com/BCCVL/org.bccvl.site/archive/${versions:org.bccvl.site}.tar.gz#egg=org.bccvl.site-${versions:org.bccvl.site}
+  https://github.com/BCCVL/org.bccvl.theme/archive/${versions:org.bccvl.theme}.tar.gz#egg=org.bccvl.theme-${versions:org.bccvl.theme}
+  https://github.com/BCCVL/org.bccvl.compute/archive/${versions:org.bccvl.compute}.tar.gz#egg=org.bccvl.compute-${versions:org.bccvl.compute}
+  https://github.com/BCCVL/org.bccvl.testsetup/archive/${versions:org.bccvl.testsetup}.tar.gz#egg=org.bccvl.testsetup-${versions:org.bccvl.testsetup}
 
 [versions]
 zc.buildout = 2.2.1
 setuptools = 2.2
-# due to a bug in plone.session 3.5.1, 3.5.2 and 3.5.3 pin it
-plone.session = 3.5
+mr.developer = 1.26
+
+
+# BCCVL Projects
+org.bccvl.compute = 0.8-rc1
+org.bccvl.site = 0.8-rc1
+org.bccvl.testsetup = 0.8-rc1
+org.bccvl.theme = 1.0-rc1
+
+
+# other packages maintained by us
 collective.js.uix.multiselect = 2.0
 ordf = 0.36-gu1
 gu.plone.rdf = 2.1.2
@@ -20,27 +33,34 @@ gu.z3cform.rdf = 0.5.1
 plone.app.folderui = 0.03-gurc5
 gu.repository.content = 1.5.2
 
-plone.app.jquery = 1.8.3
 
+# other packages
 rdflib = 4.1
 rdflib-zodb = 1.0
 Jinja2 = 2.7.1
+plone.app.contenttypes = 1.1b1
+zc.queue = 1.3
 
+
+# Bugfix overrides
+# due to a bug in plone.session 3.5.1, 3.5.2 and 3.5.3 pin it
+plone.session = 3.5
 # pin collective.transmogrifier to a version < 1.5 as currently
 # quintagroup.transmogrifier 0.5 requires collective.transmogrifier < 1.5
 collective.transmogrifier = 1.4
-# need some bug fixes here (3.0.2 dict widget doesn't work properly)
-z3c.form = 3.1.0
-plone.app.z3cform = 0.7.5
-selenium = 2.39.0
 
-plone.app.contenttypes = 1.1b1
-plone.dexterity = 2.2.1
+
+# plone updates
+plone.app.jquery = 1.8.3
+z3c.form = 3.1.1
+plone.app.z3cform = 0.7.6
+selenium = 2.39.0
 plone.app.portlets = 2.5a1
-plone.app.layout = 2.3.11
-plone.app.querystring = 1.1.1
 plone.subrequest = 1.6.8
 
 
-zc.queue = 1.3
-mr.developer = 1.26
+# update pending in next plone release
+plone.dexterity = 2.2.1
+plone.app.layout = 2.3.11
+plone.app.querystring = 1.1.1
+plone.app.vocabularies = 2.1.14
