--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -59,6 +59,7 @@ extra-paths = ${buildout:parts-directory}/site-packages
 zcml-additional =
     <include package="plone.app.async" file="multi_db_instance.zcml" />
 environment-vars =
+    TZ ${site:timezone}
     ZC_ASYNC_UUID ${buildout:directory}/var/${:_buildout_section_name_}-uuid.txt
     WORKER_DIR ${site:workdir}
     COMPUTE_HOST ${site:computehost}
@@ -122,6 +123,9 @@ password = guest
 # Hostnames for various servers. 'main' is the public hostname.
 
 [site]
+# Zope's Datetime assumes unique id's for timezone's which is plain wrong
+# AEST-10 equals Queensland non DST time
+timezone = AEST-10
 hostname = www.bccvl.org.au
 schemahost = ns.bccvl.org.au
 # TODO: this might be good to do in salt
