--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -57,6 +57,7 @@ plone.app.z3cform = 0.7.6
 selenium = 2.39.0
 plone.app.portlets = 2.5a1
 plone.subrequest = 1.6.8
+plone.app.widgets = 1.4.0
 
 
 # update pending in next plone release
