add dependency on gu.transmogrifier

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -11,6 +11,7 @@ find-links +=
   https://github.com/BCCVL/org.bccvl.theme/archive/${versions:org.bccvl.theme}.tar.gz#egg=org.bccvl.theme-${versions:org.bccvl.theme}
   https://github.com/BCCVL/org.bccvl.compute/archive/${versions:org.bccvl.compute}.tar.gz#egg=org.bccvl.compute-${versions:org.bccvl.compute}
   https://github.com/BCCVL/org.bccvl.testsetup/archive/${versions:org.bccvl.testsetup}.tar.gz#egg=org.bccvl.testsetup-${versions:org.bccvl.testsetup}
+  https://github.com/gu-eresearch/gu.transmogrifier/archive/${versions:gu.transmogrifier}.tar.gz#egg=gu.transmogrifier-${versions:gu.transmogrifier}
 
 [versions]
 zc.buildout = 2.2.1
@@ -32,6 +33,7 @@ gu.plone.rdf = 2.1.2
 gu.z3cform.rdf = 0.5.1
 plone.app.folderui = 0.03-gurc5
 gu.repository.content = 1.5.2
+gu.transmogrifier = 0.4.1
 
 
 # other packages
