support configuration of internal url

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -65,6 +65,7 @@ environment-vars =
     COMPUTE_HOST ${site:computehost}
     COMPUTE_USER ${site:computeuser}
     DATA_MOVER ${site:datamover}
+    INTERNAL_URL http://127.0.0.1:${ports:balancer}
 zope-conf-additional =
     <zodb_db async>
         cache-size ${instance-settings:zodb-cache-size}
@@ -185,6 +186,7 @@ queue = 5672
 moai = 8180
 visualiser = 10600
 data_mover = 10700
+balancer = 8201
 
 
 # OS users to drop to for various processes
