pin plone.app.event (1.2.1 doesn’t work with plone.app.vocabularies 2.1.14)

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -67,3 +67,4 @@ plone.dexterity = 2.2.1
 plone.app.layout = 2.3.11
 plone.app.querystring = 1.1.1
 plone.app.vocabularies = 2.1.14
+plone.app.event = 1.2
