Borrowed some project infrastructure from TerraNova's buildout repo
--HG--
rename : bootstrap.py => bootstrap-buildout.py
rename : buildout.cfg.staging => configs/staging.cfg
extra : rebase_source : c557702d7f54527a83f9a7fcf9aecf4f8077830d

--- a/.hgignore
+++ b/.hgignore
@@ -1,15 +1,24 @@
 syntax: glob
 
-bin
-etc
-src
-var
-.git
-eggs
-parts
-develop-eggs
-bin/buildout
 buildout.cfg
+.ropeproject
+DATA
+bin
+.git
+*.pyc
+.options.json
+.coverage
 .installed.cfg
 .mr.developer.cfg
+PYSMELLTAGS
+PYSMELLTAGS.stdlib
+develop-eggs
+parts
+var
 picked-versions.cfg
+eggs
+etc
+moai.log
+coverage
+report
+.vagrant
