--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -37,6 +37,7 @@ zeo-conf-additional =
 # Default settings for ZEO clients.
 [instance-settings]
 eggs =
+    nose
     Pillow
     Products.CMFPlone
     Products.ZSQLMethods # currently required by Products.CMFCore
