--- a/buildout.d/picked-versions.cfg
+++ b/buildout.d/picked-versions.cfg
@@ -17,10 +17,9 @@ gdata = 2.0.18
 geopy = 0.98.2
 icalendar = 3.6.1
 ipdb = 0.8
-ipython = 1.2.1
+ipython = 2.0.0
 plone.app.async = 1.6
 plone.app.debugtoolbar = 1.0a3
-plone.app.event = 1.2
 plone.app.robotframework = 0.8.2
 plone.app.toolbar = 1.4.0
 plone.app.widgets = 1.4.0
@@ -130,6 +129,10 @@ collective.z3cform.mapwidget = 2.0
 # Required by:
 # org.bccvl.site==1.0dev0
 collective.z3cform.widgets = 1.0b9
+
+# Required by:
+# org.bccvl.site==0.8.3-dev
+collective.z3cform.wizard = 1.4.8
 
 # Required by:
 # org.bccvl.site==1.0dev0
@@ -1672,7 +1675,7 @@ Pairtree = 0.5.8
 Products.AdvancedQuery = 3.0.3
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 Products.AutoUserMakerPASPlugin = 1.0
 
 # Required by:
@@ -1680,7 +1683,7 @@ Products.AutoUserMakerPASPlugin = 1.0
 Products.DateRecurringIndex = 2.1
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 Products.ShibbolethPermissions = 0.8b2
 
 # Required by:
@@ -1688,7 +1691,7 @@ Products.ShibbolethPermissions = 0.8b2
 SPARQLWrapper = 1.5.2
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 collective.blueprint.jsonmigrator = 0.1.1
 
 # Required by:
@@ -1696,32 +1699,32 @@ collective.blueprint.jsonmigrator = 0.1.1
 collective.elephantvocabulary = 0.2.4
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 collective.geo.contentlocations = 3.1
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 collective.geo.geographer = 2.0
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 collective.geo.kml = 3.2
 
 # Required by:
 # collective.z3cform.mapwidget==2.0
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 collective.geo.mapwidget = 2.1.1
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 collective.geo.openlayers = 3.1
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 collective.geo.settings = 3.0
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 collective.googleanalytics = 1.4.3
 
 # Required by:
@@ -1729,27 +1732,27 @@ collective.googleanalytics = 1.4.3
 collective.indexing = 1.8
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 collective.onlogin = 1.0
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 collective.quickupload = 1.6.3
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 collective.setuphelpers = 0.6.3
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 collective.z3cform.mapwidget = 2.0
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 collective.z3cform.widgets = 1.0b9
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 dexterity.membrane = 0.4
 
 # Required by:
@@ -1948,44 +1951,8 @@ collective.geo.mapwidget = 2.1.1
 collective.geo.openlayers = 3.1
 
 # Required by:
-# org.bccvl.site==0.8-dev
-collective.geo.settings = 3.0
-
-# Required by:
-# org.bccvl.site==0.8-dev
-collective.googleanalytics = 1.4.3
-
-# Required by:
-# dexterity.membrane==0.4
-collective.indexing = 1.8
-
-# Required by:
-# org.bccvl.site==0.8-dev
-collective.onlogin = 1.0
-
-# Required by:
-# org.bccvl.site==0.8-dev
-collective.quickupload = 1.6.3
-
-# Required by:
-# org.bccvl.site==0.8-dev
-collective.setuphelpers = 0.6.3
-
-# Required by:
-# org.bccvl.site==0.8-dev
-collective.z3cform.mapwidget = 2.0
-
-# Required by:
-# org.bccvl.site==0.8-dev
-collective.z3cform.widgets = 1.0b9
-
-# Required by:
-# org.bccvl.site==0.8-dev
-dexterity.membrane = 0.4
-
-# Required by:
-# paramiko==1.12.2
-ecdsa = 0.10
+# ipython==2.0.0
+gnureadline = 6.2.5
 
 # Required by:
 # rdflib==4.1.0
@@ -1996,7 +1963,7 @@ isodate = 0.5.0
 mock = 1.0.1
 
 # Required by:
-# org.bccvl.compute==0.8-dev
+# org.bccvl.compute==0.9.1-dev
 paramiko = 1.12.2
 
 # Required by:
@@ -2004,7 +1971,7 @@ paramiko = 1.12.2
 persistent = 4.0.7
 
 # Required by:
-# org.bccvl.theme==1.0.dev0
+# org.bccvl.theme==1.1.1-dev
 plone.app.themingplugins = 1.0b1
 
 # Required by:
@@ -2013,7 +1980,7 @@ plone.app.themingplugins = 1.0b1
 plone.app.transmogrifier = 1.2
 
 # Required by:
-# plone.app.contenttypes==1.1b1
+# plone.app.contenttypes==1.1b2
 plone.formwidget.querystring = 1.1.1
 
 # Required by:
@@ -2029,15 +1996,19 @@ plone.tiles = 1.2
 pyparsing = 2.0.1
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 quintagroup.transmogrifier = 0.5
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# org.bccvl.site==0.9.1-dev
 sc.social.like = 1.0.1
 
 # Required by:
-# org.bccvl.site==0.8-dev
+# ftw.upgrade==1.7.2
+tarjan = 0.1.2
+
+# Required by:
+# org.bccvl.site==0.9.1-dev
 transmogrify.dexterity = 1.2
 
 # Required by:
