generate coverage report in jenkins build

--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -216,7 +216,8 @@ eggs =
 ##############################################################################
 [jenkins]
 jenkins-test-eggs = ${instance-settings:eggs}
-jenkins-test-directories = ${instance-settings:eggs}
+#jenkins-test-directories = ${instance-settings:eggs}
+jenkins-test-directories =
 
 [jenkins-test]
 # Creates a "jenkins-test" script in the bin directory of the buildout that
@@ -250,14 +251,13 @@ input = inline:
     # Collect test coverage results for all packages
     echo "Run test coverage analysis for all packages."
     DIRECTORIES="${jenkins:jenkins-test-directories}"
-    for pkgdir in $DIRECTORIES
-    do
-        # Runs a code coverage analysis on top of the "jenkins-test" script for
-        # all packages. The data will be collected in a ".coverage" output file
-        # in the buildout directory.
-        echo "Analyse $pkgdir"
-        ${:coverage} run -p --source=$pkgdir ${:jenkins-test} --all
-    done
+    # make DIRECTORIES a comma separated list
+    SOURCES=$(echo -n $DIRECTORIES | sed  's/[[:space:]]/,/g')
+    # Runs a code coverage analysis on top of the "jenkins-test" script for
+    # all packages. The data will be collected in a ".coverage" output file
+    # in the buildout directory.
+    echo "Run coverage tests"
+    ${:coverage} run -p --source="$SOURCES" ${:jenkins-test} --all
     echo "Create test coverage report."
     # Combine all package analysis
     ${:coverage} combine
