--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -69,12 +69,20 @@ defaults = ['--auto-color', '--auto-progress', '--xml',
             '-m', 'org.bccvl.theme',
 #            '-m', 'org.bccvl.compute',
            ]
-eggs +=
+
+[jenkins]
+jenkins-test-eggs +=
     org.bccvl.site [test]
     org.bccvl.theme [test]
     gu.plone.rdf [test]
     gu.repository.content [test]
     gu.z3cform.rdf [test]
+jenkins-test-directories +=
+    src/org.bccvl.site
+    src/org.bccvl.theme
+    src/gu.plone.rdf
+    src/gu.repository.content
+    src/gu.z3cform.rdf
 
 
 [instance-settings]
