use qa branches in qa

--- a/buildout.d/sources.cfg
+++ b/buildout.d/sources.cfg
@@ -28,10 +28,10 @@ rdflib_push = git@github.com:RDFLib
 
 
 [sources]
-org.bccvl.site = git ${remotes:bccvl}/org.bccvl.site.git pushurl=${remotes:bccvl_push}/org.bccvl.site.git branch=develop
-org.bccvl.theme = git ${remotes:bccvl}/org.bccvl.theme.git pushurl=${remotes:bccvl_push}/org.bccvl.theme.git branch=develop
-org.bccvl.testsetup = git ${remotes:bccvl}/org.bccvl.testsetup.git pushurl=${remotes:bccvl_push}/org.bccvl.testsetup.git branch=develop
-org.bccvl.compute = git ${remotes:bccvl}/org.bccvl.compute.git pushurl=${remotes:bccvl_push}/org.bccvl.compute.git branch=develop
+org.bccvl.site = git ${remotes:bccvl}/org.bccvl.site.git pushurl=${remotes:bccvl_push}/org.bccvl.site.git branch=qa
+org.bccvl.theme = git ${remotes:bccvl}/org.bccvl.theme.git pushurl=${remotes:bccvl_push}/org.bccvl.theme.git branch=qa
+org.bccvl.testsetup = git ${remotes:bccvl}/org.bccvl.testsetup.git pushurl=${remotes:bccvl_push}/org.bccvl.testsetup.git branch=qa
+org.bccvl.compute = git ${remotes:bccvl}/org.bccvl.compute.git pushurl=${remotes:bccvl_push}/org.bccvl.compute.git branch=qa
 
 gu.repository.content = git ${remotes:subsoft}/gu.repository.content.git pushurl=${remotes:subsoft_push}:gu.repository.content.git
 gu.plone.rdf = git ${remotes:subsoft}/gu.plone.rdf.git pushurl=${remotes:subsoft_push}:gu.plone.rdf.git
