--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -11,6 +11,7 @@ find-links +=
   https://github.com/BCCVL/org.bccvl.theme/archive/${versions:org.bccvl.theme}.tar.gz#egg=org.bccvl.theme-${versions:org.bccvl.theme}
   https://github.com/BCCVL/org.bccvl.compute/archive/${versions:org.bccvl.compute}.tar.gz#egg=org.bccvl.compute-${versions:org.bccvl.compute}
   https://github.com/BCCVL/org.bccvl.testsetup/archive/${versions:org.bccvl.testsetup}.tar.gz#egg=org.bccvl.testsetup-${versions:org.bccvl.testsetup}
+  https://github.com/BCCVL/org.bccvl.tasks/archive/${versions:org.bccvl.tasks}.tar.gz#egg=org.bccvl.tasks-${versions:org.bccvl.tasks}
   https://github.com/gu-eresearch/gu.transmogrifier/archive/${versions:gu.transmogrifier}.tar.gz#egg=gu.transmogrifier-${versions:gu.transmogrifier}
 
 [versions]
@@ -23,6 +24,7 @@ org.bccvl.compute = 0.9.2-rc1
 org.bccvl.site = 0.9.1-rc1
 org.bccvl.testsetup = 0.9.1-rc1
 org.bccvl.theme = 1.1.2-rc1
+org.bccvl.tasks = 0.9.0-rc1
 
 
 # other packages maintained by us
