--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -36,6 +36,7 @@ eggs =
     Products.ZSQLMethods # currently required by Products.CMFCore
     roman # temporary bypass for https://bugs.launchpad.net/zope2/+bug/539181    Plone
     org.bccvl.site # our policy package... should pull in any other dependencies
+    celery # need the celery start scripts
 zcml =
 products =
 user = admin:admin
