generate simple celery config within buildout

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -54,6 +54,7 @@ environment-vars =
     TZ ${site:timezone}
     DATA_MOVER ${site:datamover}
     INTERNAL_URL http://127.0.0.1:${ports:balancer}
+    CELERY_JSON_CONFIG ${site:celery_json_config}
 zope-conf-additional =
     <product-config gu.plone.rdf>
         inifile ${ordf-conf:output}
@@ -100,13 +101,7 @@ timezone = AEST-10
 hostname = www.bccvl.org.au
 schemahost = ns.bccvl.org.au
 # TODO: this might be good to do in salt
-certfile = /etc/pki/tls/certs/localhost.crt
-keyfile = /etc/pki/tls/private/localhost.key
-workdir = /mnt/work
-computehost = 127.0.0.1
-computeuser = ${users:main}
-datamover = http://127.0.0.1:10700/data_mover
-
+celery_json_config = ${buildout:directory}/etc/celery.json
 
 [hosts]
 main = 127.0.0.1
