--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -83,6 +83,14 @@ input = ${buildout:directory}/buildout.d/ordf.ini.in
 output = ${buildout:directory}/etc/ordf.ini
 
 ##############################################################################
+# Celery config
+##############################################################################
+[celery-conf]
+recipe = collective.recipe.template
+input = ${buildout:directory}/buildout.d/celery.json.in
+output = ${buildout:directory}/etc/celery.json
+
+##############################################################################
 # MOAI
 ##############################################################################
 [moai-config]
