--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -26,6 +26,11 @@ org.bccvl.testsetup = 0.9.1-rc1
 org.bccvl.theme = 1.5.0-rc1
 org.bccvl.tasks = 1.5.0-rc1
 
+celery = 3.1.12
+kombu = 3.0.19
+billiard = 3.3.0.17
+amqp = 1.4.5
+anyjson = 0.3.3
 
 # other packages maintained by us
 collective.js.uix.multiselect = 2.0
@@ -43,6 +48,7 @@ rdflib-zodb = 1.0
 Jinja2 = 2.7.1
 plone.app.contenttypes = 1.1b2
 zc.queue = 1.3
+backports.ssl-match-hostname = 3.4.0.2
 
 
 # Bugfix overrides
@@ -69,3 +75,4 @@ plone.app.layout = 2.3.11
 plone.app.querystring = 1.1.1
 plone.app.vocabularies = 2.1.14
 plone.app.event = 1.2
+plone.api = 1.1.0
