add compute tests to test runner

--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -38,7 +38,7 @@ auto-checkout +=
 eggs +=
     org.bccvl.site [test]
     org.bccvl.theme [test]
-#    org.bccvl.compute
+    org.bccvl.compute [test]
     gu.plone.rdf [test]
     gu.repository.content [test]
     gu.z3cform.rdf [test]
@@ -48,7 +48,7 @@ defaults = ['--auto-color', '--auto-progress',
             '-m', 'gu.repository.content',
             '-m', 'org.bccvl.site',
             '-m', 'org.bccvl.theme',
-#            '-m', 'org.bccvl.compute',
+            '-m', 'org.bccvl.compute',
            ]
 
 [test-coverage]
@@ -58,7 +58,7 @@ defaults = ['--coverage', '../../coverage', '-v', '--auto-progress',
             '-m', 'gu.repository.content',
             '-m', 'org.bccvl.site',
             '-m', 'org.bccvl.theme',
-#            '-m', 'org.bccvl.compute',
+            '-m', 'org.bccvl.compute',
            ]
 
 [jenkins-test]
@@ -68,7 +68,7 @@ defaults = ['--auto-color', '--auto-progress', '--xml',
             '-m', 'gu.repository.content',
             '-m', 'org.bccvl.site',
             '-m', 'org.bccvl.theme',
-#            '-m', 'org.bccvl.compute',
+            '-m', 'org.bccvl.compute',
            ]
 
 [jenkins]
