--- a/buildout.d/sources.cfg
+++ b/buildout.d/sources.cfg
@@ -38,5 +38,6 @@ gu.repository.content = git ${remotes:subsoft}/gu.repository.content.git pushurl
 gu.plone.rdf = git ${remotes:subsoft}/gu.plone.rdf.git pushurl=${remotes:subsoft_push}:gu.plone.rdf.git
 plone.app.folderui = git ${remotes:subsoft}/plone.app.folderui pushurl=${remotes:subsoft_push}:plone.app.folderui branch=localdev
 gu.z3cform.rdf = git ${remotes:subsoft}/gu.z3cform.rdf pushurl=${remotes:subsoft_push}:gu.z3cform.rdf
+gu.transmogrifier = git ${remotes:ersgh}/gu.transmogrifier.git pushurl=${remotes:ersgh_push}/gu.transmogrifier.git
 collective.js.uix.multiselect = git ${remotes:ersgh}/collective.js.uix.multiselect.git pushurl=${remotes:ersgh_push}/collective.js.uix.multiselect.git
 ordf = hg https://bitbucket.org/gweis/ordf
