--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -43,7 +43,8 @@ gu.transmogrifier = 0.4.1
 
 
 # other packages
-rdflib = 4.1
+lxml = 3.3.5
+rdflib = 4.1.2
 rdflib-zodb = 1.0
 Jinja2 = 2.7.1
 plone.app.contenttypes = 1.1b2
