fetch list of eggs from instance-settings for ipython shell

--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -133,7 +133,7 @@ make-options =
 recipe = zc.recipe.egg
 eggs =
     ipython
-    ${instance-debug:eggs}
+    ${instance-settings:eggs}
 extra-paths = ${instance-settings:extra-paths}
 scripts = ipython
 
