jenkins parts for staging configuration

--- a/buildout.d/staging.cfg
+++ b/buildout.d/staging.cfg
@@ -32,7 +32,7 @@ eggs +=
 eggs +=
     org.bccvl.site [test]
     org.bccvl.theme [test]
-#    org.bccvl.compute
+    org.bccvl.compute [test]
     gu.plone.rdf [test]
     gu.repository.content [test]
     gu.z3cform.rdf [test]
@@ -42,7 +42,7 @@ defaults = ['--auto-color', '--auto-progress',
             '-m', 'gu.repository.content',
             '-m', 'org.bccvl.site',
             '-m', 'org.bccvl.theme',
-#            '-m', 'org.bccvl.compute',
+            '-m', 'org.bccvl.compute',
            ]
 
 [test-coverage]
@@ -52,7 +52,7 @@ defaults = ['--coverage', '../../coverage', '-v', '--auto-progress',
             '-m', 'gu.repository.content',
             '-m', 'org.bccvl.site',
             '-m', 'org.bccvl.theme',
-#            '-m', 'org.bccvl.compute',
+            '-m', 'org.bccvl.compute',
            ]
 
 [jenkins-test]
@@ -62,11 +62,21 @@ defaults = ['--auto-color', '--auto-progress', '--xml',
             '-m', 'gu.repository.content',
             '-m', 'org.bccvl.site',
             '-m', 'org.bccvl.theme',
-#            '-m', 'org.bccvl.compute',
+            '-m', 'org.bccvl.compute',
            ]
-eggs +=
+
+
+[jenkins]
+jenkins-test-eggs +=
     org.bccvl.site [test]
+    org.bccvl.compute [test]
     org.bccvl.theme [test]
     gu.plone.rdf [test]
     gu.repository.content [test]
     gu.z3cform.rdf [test]
+jenkins-test-directories +=
+    src/org.bccvl.site
+    src/org.bccvl.theme
+    src/gu.plone.rdf
+    src/gu.repository.content
+    src/gu.z3cform.rdf
