--- a/buildout.d/sources.cfg
+++ b/buildout.d/sources.cfg
@@ -30,10 +30,10 @@ org.bccvl.testsetup = git ${remotes:bccvl}/org.bccvl.testsetup.git pushurl=${rem
 org.bccvl.compute = git ${remotes:bccvl}/org.bccvl.compute.git pushurl=${remotes:bccvl_push}/org.bccvl.compute.git branch=develop
 org.bccvl.tasks = git ${remotes:bccvl}/org.bccvl.tasks.git pushurl=${remotes:bccvl_push}/org.bccvl.tasks.git branch=develop
 
-gu.repository.content = git ${remotes:ersgh}/gu.repository.content.git pushurl=${remotes:ersgh_push}:gu.repository.content.git
-gu.plone.rdf = git ${remotes:ersgh}/gu.plone.rdf.git pushurl=${remotes:ersgh_push}:gu.plone.rdf.git
-plone.app.folderui = git ${remotes:ersgh}/plone.app.folderui pushurl=${remotes:ersgh_push}:plone.app.folderui branch=localdev
-gu.z3cform.rdf = git ${remotes:ersgh}/gu.z3cform.rdf pushurl=${remotes:ersgh_push}:gu.z3cform.rdf
+gu.repository.content = git ${remotes:ersgh}/gu.repository.content.git pushurl=${remotes:ersgh_push}/gu.repository.content.git
+gu.plone.rdf = git ${remotes:ersgh}/gu.plone.rdf.git pushurl=${remotes:ersgh_push}/gu.plone.rdf.git
+plone.app.folderui = git ${remotes:ersgh}/plone.app.folderui pushurl=${remotes:ersgh_push}/plone.app.folderui branch=localdev
+gu.z3cform.rdf = git ${remotes:ersgh}/gu.z3cform.rdf pushurl=${remotes:ersgh_push}/gu.z3cform.rdf
 gu.transmogrifier = git ${remotes:ersgh}/gu.transmogrifier.git pushurl=${remotes:ersgh_push}/gu.transmogrifier.git
 collective.js.uix.multiselect = git ${remotes:ersgh}/collective.js.uix.multiselect.git pushurl=${remotes:ersgh_push}/collective.js.uix.multiselect.git
 ordf = hg https://bitbucket.org/gweis/ordf
