consistent git uris

--- a/buildout.d/sources.cfg
+++ b/buildout.d/sources.cfg
@@ -32,8 +32,8 @@ org.bccvl.tasks = git ${remotes:bccvl}/org.bccvl.tasks.git pushurl=${remotes:bcc
 
 gu.repository.content = git ${remotes:ersgh}/gu.repository.content.git pushurl=${remotes:ersgh_push}/gu.repository.content.git
 gu.plone.rdf = git ${remotes:ersgh}/gu.plone.rdf.git pushurl=${remotes:ersgh_push}/gu.plone.rdf.git
-plone.app.folderui = git ${remotes:ersgh}/plone.app.folderui pushurl=${remotes:ersgh_push}/plone.app.folderui branch=localdev
-gu.z3cform.rdf = git ${remotes:ersgh}/gu.z3cform.rdf pushurl=${remotes:ersgh_push}/gu.z3cform.rdf
+plone.app.folderui = git ${remotes:ersgh}/plone.app.folderui.git pushurl=${remotes:ersgh_push}/plone.app.folderui.git branch=localdev
+gu.z3cform.rdf = git ${remotes:ersgh}/gu.z3cform.rdf.git pushurl=${remotes:ersgh_push}/gu.z3cform.rdf.git
 gu.transmogrifier = git ${remotes:ersgh}/gu.transmogrifier.git pushurl=${remotes:ersgh_push}/gu.transmogrifier.git
 collective.js.uix.multiselect = git ${remotes:ersgh}/collective.js.uix.multiselect.git pushurl=${remotes:ersgh_push}/collective.js.uix.multiselect.git
 ordf = hg https://bitbucket.org/gweis/ordf
