--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -20,11 +20,11 @@ setuptools = 2.2
 mr.developer = 1.26
 
 # BCCVL Projects
-org.bccvl.compute = 1.6.0-rc2
-org.bccvl.site = 1.6.0-rc2
-org.bccvl.testsetup = 0.9.7-rc1
-org.bccvl.theme = 1.6.0-rc3
-org.bccvl.tasks = 1.6.0-rc1
+org.bccvl.compute = 1.6.0
+org.bccvl.site = 1.6.0
+org.bccvl.testsetup = 0.9.7
+org.bccvl.theme = 1.6.0
+org.bccvl.tasks = 1.6.0
 
 celery = 3.1.12
 kombu = 3.0.19
