--- a/buildout.d/picked-versions.cfg
+++ b/buildout.d/picked-versions.cfg
@@ -1,5 +1,6 @@
 [versions]
 Babel = 1.3
+Chameleon = 2.15
 Products.Clouseau = 1.0
 Products.DocFinderTab = 1.0.5
 Products.PrintingMailHost = 0.7
@@ -18,6 +19,8 @@ plone.app.robotframework = 0.9.1
 plone.event = 1.1
 plone.formwidget.recurrence = 1.2.1
 pygeoif = 0.4.1
+sourcecodegen = 0.6.14
+z3c.pt = 2.2.3
 z3c.recipe.staticlxml = 0.10
 zptlint = 0.2.4
 
@@ -52,10 +55,6 @@ Products.ShibbolethPermissions = 0.8b2
 # Required by:
 # rdflib==4.1.2
 SPARQLWrapper = 1.5.2
-
-# Required by:
-# org.bccvl.site==1.5.2-dev
-collective.blueprint.jsonmigrator = 0.1.1
 
 # Required by:
 # plone.app.event==1.2
@@ -95,6 +94,10 @@ collective.googleanalytics = 1.4.3
 collective.indexing = 1.8
 
 # Required by:
+# org.bccvl.site==1.6.4
+collective.jsonmigrator = 0.2
+
+# Required by:
 # org.bccvl.site==1.5.2-dev
 collective.onlogin = 1.0
 
@@ -117,6 +120,10 @@ collective.z3cform.widgets = 1.0b9
 # Required by:
 # org.bccvl.site==1.5.2-dev
 dexterity.membrane = 0.4
+
+# Required by:
+# org.bccvl.site==1.6.4
+five.pt = 2.2.2
 
 # Required by:
 # rdflib==4.1.2
