--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -51,6 +51,7 @@ Jinja2 = 2.7.1
 plone.app.contenttypes = 1.1b2
 zc.queue = 1.3
 backports.ssl-match-hostname = 3.4.0.2
+Products.AutoUserMakerPASPlugin = 1.1
 
 
 # Bugfix overrides
