--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -20,11 +20,11 @@ setuptools = 2.2
 mr.developer = 1.26
 
 # BCCVL Projects
-org.bccvl.compute = 1.6.5-rc3
-org.bccvl.site = 1.6.5-rc1
-org.bccvl.testsetup = 0.9.11-rc1
-org.bccvl.theme = 1.6.3-rc3
-org.bccvl.tasks = 1.6.1
+org.bccvl.compute = 1.6.6-rc1
+org.bccvl.site = 1.6.6-rc1
+org.bccvl.testsetup = 0.9.12-rc1
+org.bccvl.theme = 1.6.4-rc1
+org.bccvl.tasks = 1.6.2-rc1
 
 celery = 3.1.16
 kombu = 3.0.23
