--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -60,7 +60,7 @@ plone.session = 3.5
 # pin collective.transmogrifier to a version < 1.5 as currently
 # quintagroup.transmogrifier 0.5 requires collective.transmogrifier < 1.5
 collective.transmogrifier = 1.4
-
+dexterity.membrane = 0.4
 
 # plone updates
 plone.app.jquery = 1.8.3
