pin plone.app.transmogrifier to 1.2

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -61,6 +61,7 @@ plone.session = 3.5
 # quintagroup.transmogrifier 0.5 requires collective.transmogrifier < 1.5
 collective.transmogrifier = 1.4
 dexterity.membrane = 0.4
+plone.app.transmogrifier = 1.2
 
 # plone updates
 plone.app.jquery = 1.8.3
