--- a/buildout.d/picked-versions.cfg
+++ b/buildout.d/picked-versions.cfg
@@ -1,23 +1,27 @@
 [versions]
 Babel = 1.3
-Chameleon = 2.15
+Chameleon = 2.16
 Products.Clouseau = 1.0
 Products.DocFinderTab = 1.0.5
 Products.PrintingMailHost = 0.7
 Products.membrane = 2.1.11
-collective.recipe.backup = 2.17
+collective.jsonify = 0.3-dev0
+collective.profiler = 0.3
+collective.recipe.backup = 2.18
 collective.recipe.plonesite = 1.8.2
 collective.xmltestreport = 1.3.1
 collective.z3cform.colorpicker = 1.1
+eea.faceted.vocabularies = 4.9
+eea.facetednavigation = 7.0
 gdata = 2.0.18
 geopy = 0.99
 icalendar = 3.6.2
 ipdb = 0.8
-ipython = 1.2.1
+ipython = 2.1.0
 plone.app.debugtoolbar = 1.0a3
-plone.app.robotframework = 0.9.1
+plone.app.robotframework = 0.9.2
 plone.event = 1.1
-plone.formwidget.recurrence = 1.2.1
+plone.formwidget.recurrence = 1.2.3
 pygeoif = 0.4.1
 sourcecodegen = 0.6.14
 z3c.pt = 2.2.3
@@ -45,44 +49,44 @@ Products.AdvancedQuery = 3.0.3
 Products.DateRecurringIndex = 2.1
 
 # Required by:
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 Products.ShibbolethPermissions = 0.8b2
 
 # Required by:
 # rdflib==4.1.2
-SPARQLWrapper = 1.5.2
+SPARQLWrapper = 1.6.0
 
 # Required by:
 # plone.app.event==1.2
 collective.elephantvocabulary = 0.2.4
 
 # Required by:
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 collective.geo.contentlocations = 3.1
 
 # Required by:
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 collective.geo.geographer = 2.0
 
 # Required by:
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 collective.geo.kml = 3.2
 
 # Required by:
 # collective.z3cform.mapwidget==2.0
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 collective.geo.mapwidget = 2.1.2
 
 # Required by:
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 collective.geo.openlayers = 3.1
 
 # Required by:
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 collective.geo.settings = 3.0
 
 # Required by:
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 collective.googleanalytics = 1.4.3
 
 # Required by:
@@ -94,27 +98,27 @@ collective.indexing = 1.8
 collective.jsonmigrator = 0.2
 
 # Required by:
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 collective.onlogin = 1.0
 
 # Required by:
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 collective.quickupload = 1.6.3
 
 # Required by:
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 collective.setuphelpers = 0.6.3
 
 # Required by:
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 collective.z3cform.mapwidget = 2.0
 
 # Required by:
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 collective.z3cform.widgets = 1.0b9
 
 # Required by:
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 dexterity.membrane = 0.4
 
 # Required by:
@@ -138,6 +142,7 @@ persistent = 4.0.8
 plone.app.themingplugins = 1.0b1
 
 # Required by:
+# collective.jsonmigrator==0.2
 # quintagroup.transmogrifier==0.5
 # transmogrify.dexterity==1.2
 plone.app.transmogrifier = 1.2
@@ -147,23 +152,27 @@ plone.app.transmogrifier = 1.2
 plone.formwidget.querystring = 1.1.2
 
 # Required by:
+# collective.profiler==0.3
+profilehooks = 1.7
+
+# Required by:
 # rdflib==4.1.2
 pyparsing = 2.0.2
 
 # Required by:
-# org.bccvl.compute==1.5.2-dev
+# org.bccvl.compute==1.6.7-dev
 python-xmp-toolkit = 2.0.1
 
 # Required by:
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 quintagroup.transmogrifier = 0.5
 
 # Required by:
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 sc.social.like = 1.0.1
 
 # Required by:
-# org.bccvl.site==1.5.2-dev
+# org.bccvl.site==1.6.7-dev
 transmogrify.dexterity = 1.2
 
 # Required by:
