--- a/buildout.d/picked-versions.cfg
+++ b/buildout.d/picked-versions.cfg
@@ -1,15 +1,13 @@
 [versions]
-Babel = 1.3
+# Added by buildout at 2015-03-12 14:09:51.178126
 Chameleon = 2.16
 Products.Clouseau = 1.0
 Products.DocFinderTab = 1.0.5
 Products.PrintingMailHost = 0.7
 Products.membrane = 2.1.11
-collective.jsonify = 0.3-dev0
 collective.profiler = 0.3
 collective.recipe.backup = 2.18
 collective.recipe.plonesite = 1.8.2
-collective.xmltestreport = 1.3.1
 collective.z3cform.colorpicker = 1.1
 eea.faceted.vocabularies = 4.9
 eea.facetednavigation = 7.0
@@ -19,10 +17,11 @@ icalendar = 3.6.2
 ipdb = 0.8
 ipython = 2.1.0
 plone.app.debugtoolbar = 1.0a3
-plone.app.robotframework = 0.9.2
+plone.app.robotframework = 0.9.8
 plone.event = 1.1
 plone.formwidget.recurrence = 1.2.3
 pygeoif = 0.4.1
+robotframework-ride = 1.1
 sourcecodegen = 0.6.14
 z3c.pt = 2.2.3
 z3c.recipe.staticlxml = 0.10
@@ -45,11 +44,11 @@ Pairtree = 0.5.8
 Products.AdvancedQuery = 3.0.3
 
 # Required by:
-# plone.app.event==1.2
+# plone.app.event==1.2.7
 Products.DateRecurringIndex = 2.1
 
 # Required by:
-# org.bccvl.site==1.6.7-dev
+# org.bccvl.site==1.8.0-dev
 Products.ShibbolethPermissions = 0.8b2
 
 # Required by:
@@ -57,36 +56,36 @@ Products.ShibbolethPermissions = 0.8b2
 SPARQLWrapper = 1.6.0
 
 # Required by:
-# plone.app.event==1.2
+# plone.app.event==1.2.7
 collective.elephantvocabulary = 0.2.4
 
 # Required by:
-# org.bccvl.site==1.6.7-dev
+# org.bccvl.site==1.8.0-dev
 collective.geo.contentlocations = 3.1
 
 # Required by:
-# org.bccvl.site==1.6.7-dev
+# org.bccvl.site==1.8.0-dev
 collective.geo.geographer = 2.0
 
 # Required by:
-# org.bccvl.site==1.6.7-dev
+# org.bccvl.site==1.8.0-dev
 collective.geo.kml = 3.2
 
 # Required by:
 # collective.z3cform.mapwidget==2.0
-# org.bccvl.site==1.6.7-dev
+# org.bccvl.site==1.8.0-dev
 collective.geo.mapwidget = 2.1.2
 
 # Required by:
-# org.bccvl.site==1.6.7-dev
+# org.bccvl.site==1.8.0-dev
 collective.geo.openlayers = 3.1
 
 # Required by:
-# org.bccvl.site==1.6.7-dev
+# org.bccvl.site==1.8.0-dev
 collective.geo.settings = 3.0
 
 # Required by:
-# org.bccvl.site==1.6.7-dev
+# org.bccvl.site==1.8.0-dev
 collective.googleanalytics = 1.4.3
 
 # Required by:
@@ -94,35 +93,35 @@ collective.googleanalytics = 1.4.3
 collective.indexing = 1.8
 
 # Required by:
-# org.bccvl.site==1.6.4
+# org.bccvl.site==1.8.0-dev
 collective.jsonmigrator = 0.2
 
 # Required by:
-# org.bccvl.site==1.6.7-dev
+# org.bccvl.site==1.8.0-dev
 collective.onlogin = 1.0
 
 # Required by:
-# org.bccvl.site==1.6.7-dev
+# org.bccvl.site==1.8.0-dev
 collective.quickupload = 1.6.3
 
 # Required by:
-# org.bccvl.site==1.6.7-dev
+# org.bccvl.site==1.8.0-dev
 collective.setuphelpers = 0.6.3
 
 # Required by:
-# org.bccvl.site==1.6.7-dev
+# org.bccvl.site==1.8.0-dev
 collective.z3cform.mapwidget = 2.0
 
 # Required by:
-# org.bccvl.site==1.6.7-dev
+# org.bccvl.site==1.8.0-dev
 collective.z3cform.widgets = 1.0b9
 
 # Required by:
-# org.bccvl.site==1.6.7-dev
-dexterity.membrane = 0.4
+# eea.facetednavigation==7.0
+eea.jquery = 7.8
 
 # Required by:
-# org.bccvl.site==1.6.4
+# org.bccvl.site==1.8.0-dev
 five.pt = 2.2.2
 
 # Required by:
@@ -138,14 +137,8 @@ isodate = 0.5.0
 persistent = 4.0.8
 
 # Required by:
-# org.bccvl.theme==1.5.3-dev
+# org.bccvl.theme==1.6.5-dev
 plone.app.themingplugins = 1.0b1
-
-# Required by:
-# collective.jsonmigrator==0.2
-# quintagroup.transmogrifier==0.5
-# transmogrify.dexterity==1.2
-plone.app.transmogrifier = 1.2
 
 # Required by:
 # plone.app.contenttypes==1.1b2
@@ -164,15 +157,11 @@ pyparsing = 2.0.2
 python-xmp-toolkit = 2.0.1
 
 # Required by:
-# org.bccvl.site==1.6.7-dev
-quintagroup.transmogrifier = 0.5
-
-# Required by:
-# org.bccvl.site==1.6.7-dev
+# org.bccvl.site==1.8.0-dev
 sc.social.like = 1.0.1
 
 # Required by:
-# org.bccvl.site==1.6.7-dev
+# org.bccvl.site==1.8.0-dev
 transmogrify.dexterity = 1.2
 
 # Required by:
