move collective.jsonify to experimental

--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -25,6 +25,7 @@ parts =
     jenkins-test-coverage
     omelette
     robot
+    nodejs
 
 always-checkout = true
 
@@ -103,4 +104,4 @@ eggs +=
     plone.reload
     zptlint
     ipdb
-# collective.jsonify ... has a nice jsonify query and list view for content
+    collective.profiler
