add collective.jsonify, eea.facetednavigation and plone.app.openid to experimental

--- a/buildout.d/experimental.cfg
+++ b/buildout.d/experimental.cfg
@@ -1,5 +1,8 @@
 [buildout]
 
+find_links +=
+  https://github.com/collective/collective.jsonify/archive/078b287c5dbb4870e5280ff1d44322184992fdf9.tar.gz#egg=collective.jsonify-0.3.dev0
+
 auto-checkout +=
 #    mockup
 #    Products.TinyMCE
@@ -17,6 +20,9 @@ eggs +=
     plone.app.widgets[archetypes,dexterity]
     plone.app.toolbar
     plone.app.workflowmanager
+    plone.app.openid
+    eea.facetednavigation
+#    collective.jsonify # has a nice jsonify query and list view for content
 
 [versions]
 plone.app.vocabularies = 2.1.14
