--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -59,6 +59,7 @@ Products.AutoUserMakerPASPlugin = 1.1
 # due to a bug in plone.session 3.5.1, 3.5.2 and 3.5.3 pin it
 plone.session = 3.5
 # fetch quintagroup.transmogrifier develop version so that we can use collective.transmogrifier > 1.4
+quintagroup.transmogrifier = 0.5dev
 collective.transmogrifier = 1.5
 dexterity.membrane = 0.4
 plone.app.transmogrifier = 1.3
