--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -67,6 +67,7 @@ plone.app.transmogrifier = 1.3
 # plone updates
 plone.subrequest = 1.6.8
 plone.app.widgets = 1.7.1
+plone.app.jquery = 1.8.3
 
 
 # update pending in next plone release
