--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,22 @@
 buildout.cfg
 .ropeproject
-DATA
-bin
+DATA/
+bin/
 .coverage
 .installed.cfg
 .mr.developer.cfg
 PYSMELLTAGS
 PYSMELLTAGS.stdlib
-develop-eggs
-parts
-var
+develop-eggs/
+parts/
+var/
 /picked-versions.cfg
-eggs
-etc
+eggs/
+etc/
 moai.log
-coverage
-report
-.vagrant
+coverage/
+report/
+.vagrant/
+include/
+lib/
+lib64/
