--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -21,15 +21,15 @@ setuptools = 2.2
 mr.developer = 1.26
 
 # BCCVL Projects
-org.bccvl.compute = 1.6.6
-org.bccvl.site = 1.6.6
-org.bccvl.testsetup = 0.9.12
-org.bccvl.theme = 1.6.4
-org.bccvl.tasks = 1.6.2
+org.bccvl.compute = 1.8.0-rc1
+org.bccvl.site = 1.8.0-rc1
+org.bccvl.testsetup = 1.8.0-rc1
+org.bccvl.theme = 1.8.0-rc1
+org.bccvl.tasks = 1.8.0-rc1
 
-celery = 3.1.16
-kombu = 3.0.23
-billiard = 3.3.0.18
+celery = 3.1.17
+kombu = 3.0.24
+billiard = 3.3.0.19
 amqp = 1.4.6
 anyjson = 0.3.3
 
