--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -50,7 +50,7 @@ lxml = 3.3.5
 rdflib = 4.1.2
 rdflib-zodb = 1.0
 # contenttypes 1.1b3 has unusable version constraints b4 sholud be fine again
-plone.app.contenttypes = 1.1b2
+plone.app.contenttypes = 1.1b3
 zc.queue = 1.3
 backports.ssl-match-hostname = 3.4.0.2
 Products.AutoUserMakerPASPlugin = 1.1
@@ -67,10 +67,13 @@ plone.app.transmogrifier = 1.3
 
 # plone updates
 plone.subrequest = 1.6.8
-plone.app.widgets = 1.7.1
+#plone.app.widgets = 1.8.0
 plone.app.jquery = 1.8.3
 
 
 # update pending in next plone release
-plone.app.event = 1.2.7
+#plone.app.event = 1.2.7
+plone.app.event = 1.1.4
 plone.api = 1.3.2
+#plone.formwidget.recurrence = 1.2.5
+plone.formwidget.datetime = 1.1
