--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -64,6 +64,7 @@ quintagroup.transmogrifier = 0.5dev
 collective.transmogrifier = 1.5
 dexterity.membrane = 0.4
 plone.app.transmogrifier = 1.3
+transmogrify.dexterity = 1.5.1
 
 # plone updates
 plone.subrequest = 1.6.8
